--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -4,10 +4,12 @@ html {
   background-size: cover;
 }
 
-body,html {
+body,
+html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #272727;
 }
 
 .keys {
@@ -18,34 +20,79 @@ body,html {
   justify-content: center;
 }
 
+.identifiers {
+  /* background: red; */
+  height: 200px;
+  color: white;
+}
+
+.identifiers :nth-child(1) {
+  margin-top: 0.5px;
+  margin-bottom: 120px;
+}
+
 .key {
-  border: .4rem solid black;
-  border-radius: .5rem;
+  border: 0.4rem solid black;
+  border-radius: 0.5rem;
   margin: 1rem;
   font-size: 1.5rem;
-  padding: 1rem .5rem;
-  transition: all .07s ease;
-  width: 10rem;
+  height: 200px;
+  transition: all 0.9s ease;
+  width: 15rem;
   text-align: center;
   color: white;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 0.5rem black;
+  border: 1px solid rgb(161, 151, 1);
+ 
+}
+
+.title-wrapper {
+  position: relative;
+  top: 350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  font-size: 1.5rem;
+  
+}
+
+.title {
+  color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 5px;
+
+}
+
+.pianoKey {
+  background: white;
+  color: black;
+  /* border-radius: 20px; */
+  padding: 5px;
+  display: block;
 }
 
 .playing {
-  transform: scale(1.1);
+  transform: scale(0.9);
   border-color: #ffc600;
   box-shadow: 0 0 1rem #ffc600;
 }
 
 kbd {
-  display: block;
+  display: inline-block;
   font-size: 4rem;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid rgb(243, 40, 165); */
+  margin-top: 90px;
+  
 }
 
 .sound {
   font-size: 1.2rem;
   text-transform: uppercase;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   color: #ffc600;
 }
