--- a/01 - JavaScript Piano Keys/style.css
+++ b/01 - JavaScript Piano Keys/style.css
@@ -1,7 +1,7 @@
 html {
   font-size: 10px;
-  background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
-  background-size: cover;
+  /* background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center; */
+  /* background-size: cover; */
 }
 
 body,
@@ -10,6 +10,8 @@ html {
   padding: 0;
   font-family: sans-serif;
   background-color: #272727;
+  overflow: hidden;
+ 
 }
 
 .keys {
@@ -18,6 +20,7 @@ html {
   min-height: 100vh;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .identifiers {
@@ -27,7 +30,7 @@ html {
 }
 
 .identifiers :nth-child(1) {
-  margin-top: 0.5px;
+  margin-top:  ;
   margin-bottom: 120px;
 }
 
@@ -44,18 +47,18 @@ html {
   background: rgba(0, 0, 0, 0.4);
   text-shadow: 0 0 0.5rem black;
   border: 1px solid rgb(161, 151, 1);
- 
+
+  
 }
 
 .title-wrapper {
-  position: relative;
-  top: 350px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  padding: 0;
-  margin: 0;
-  font-size: 1.5rem;
+  align-content: center;
+ 
+ 
+   
+  width: 100%;
   
 }
 
@@ -63,9 +66,11 @@ html {
   color: white;
   border-bottom-style: solid;
   border-bottom-width: 5px;
-
+   
 }
-
+.flex {
+  display: flex;
+}
 .pianoKey {
   background: white;
   color: black;
@@ -87,7 +92,6 @@ kbd {
   height: 100%;
   /* border: 1px solid rgb(243, 40, 165); */
   margin-top: 90px;
-  
 }
 
 .sound {
