--- a/01 - JavaScript Piano Keys/style.css
+++ b/01 - JavaScript Piano Keys/style.css
@@ -154,6 +154,12 @@ footer {
   text-align: center;
 }
 
+.key-parent-span {
+
+ 
+  display: flex;
+}
+
 footer p {
   display: inline-block;
   background-color: white;
