--- a/02 - JS and CSS Clock/style.css
+++ b/02 - JS and CSS Clock/style.css
@@ -105,6 +105,7 @@ body {
   transform: rotate(90deg);
   transition: all 0.5s;
   transition-timing-function: cubic-bezier(0.1,2.7,0.58,1);
+  z-index: 200;
 }
 
 .second-hand {
